# HyperWave_GC

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  ENVIRONMENT.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  gpu.md  index.md  likelihoods.md  lisa.md  quickstart.md  validation.md  wavelets.md
examples/heterodyne/: bbh_heterodyne_pe.py  heterodyne_likelihood.ipynb
examples/noise/: mixed_detector_noise_recovery.py  noise_shape_triangle.html  noise_shape_triangle.ipynb
examples/pe_fast/: bbh_fast_pe.html  bbh_fast_pe.ipynb  bbh_fast_pe.py
examples/pe_full/: bbh_full_pe.py
examples/pe_nonG/: bbh_paper_pocomc.py
examples/pe_per_detector/: bbh_per_detector_pe.py
examples/real_event/: gw150914_calibration_marginalization.py  gw150914_pe.py
examples/tbs/: tbs_array.slurm  tbs_duty_cycle.py  tbs_segment.py
gpu/: index.html
likelihoods/: index.html
lisa/: index.html
quickstart/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/api/: index.html
site/gpu/: index.html
site/likelihoods/: index.html
site/lisa/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/validation/: index.html
site/wavelets/: index.html
src/hyperwave/: __init__.py  backends.py  ml4gw.py  result.py  utils.py  validation.py
src/hyperwave/detectors/: __init__.py  calibration.py  data.py  geometry.py  psd.py  strain.py
src/hyperwave/detectors/lisa/: __init__.py  aet.py  noise.py  ucb.py
src/hyperwave/detectors/lvk/: __init__.py  coefficients.py  noise.py  waveform.py
src/hyperwave/detectors/waveforms/: __init__.py  base.py  lal_backend.py  ml4gw_backend.py  template.py
src/hyperwave/inference/: __init__.py  convergence.py  priors.py  sampling.py
src/hyperwave/likelihoods/: __init__.py  base.py  distributions_fd.py  gwparallel.py  heterodyne.py  wavelet.py
src/hyperwave/plots/: __init__.py  corners.py  fd_reconstruction.py  hyper.py  style.py  td_reconstruction.py
tasks/: detector_noise_parameters.md
tests/: conftest.py  test_calibration.py  test_detector_noise_parameters.py  test_geometry.py  test_heterodyne.py  test_likelihood_batched.py  test_pp.py  test_result.py  test_shape_per_detector.py  test_strain.py  test_waveform_backends.py
validation/: index.html
wavelets/: index.html
